welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:-6: error: Missing closing brace `}' assumed here
try {
^averageValue:1: error: expected class or object definition
var t = 0
^averageValue:2: error: expected class or object definition
def averageValue(nums:Array[Int]): Int = {
^